# DmxServerManager

./: .dockerignore  .gitignore  .gitleaks.toml  LICENSE  README.md  deny.toml  design-qa.md
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  release-public-key.b64url
backend/.cargo/: config.toml
backend/migrations/: 0001_dmx_server_manager.sql  0002_instance_storage.sql  0003_discord_webhooks.sql  0004_catalog.sql  0005_catalog_theme_selection.sql  0006_update_transactions.sql  0007_install_cancel_intent.sql  0008_unique_attached_roots.sql  0009_config_queue_players.sql  0010_enterprise_activity.sql  0011_game_update_detection.sql
backend/src/: main.rs  windows_service.rs
backend/src/api/: activity.rs  administration.rs  audit.rs  auth.rs  backups.rs  catalog.rs  chat.rs  config_files.rs  events.rs  files.rs  game_profiles.rs  jobs.rs  metrics.rs  mod.rs  mods.rs  notifications.rs  openapi.rs  panel.rs  players.rs  releases.rs  schedules.rs  webhooks.rs
backend/src/api/servers/: actions.rs  imports.rs  mod.rs
backend/src/core/: config.rs  database.rs  events.rs  mod.rs
backend/src/core/error/: codes.rs  types.rs
backend/src/domain/: v1.rs
backend/src/services/: backups.rs  catalog.rs  config_files.rs  instance_storage.rs  jobs.rs  metrics.rs  mod.rs  mod_providers.rs  notifications.rs  players.rs  profiles.rs  releases.rs  runtime.rs  schedules.rs  secrets.rs  secure_fs.rs  webhooks.rs
backend/src/services/installers/: archive.rs  bedrock.rs  hytale.rs  minecraft.rs  minecraft_loaders.rs  mod.rs  toolchains.rs
docs/: CONFIGURATION.md  GAME_PROFILES.md  INSTALLATION.md  OPERATIONS.md  SCHEDULES.md  SECURITY.md  UPGRADING.md
frontend/: eslint.config.js  index.html  openapi.json  package.json  playwright.config.ts  playwright.real.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: accessibility-i18n.spec.ts  administration.spec.ts  api.fixture.ts  auth-dashboard.spec.ts  catalog.spec.ts  create-profile.spec.ts  jobs-imports.spec.ts  operations.spec.ts  setup.spec.ts  tsconfig.json  visual-references.spec.ts
frontend/e2e-real/: global-setup.ts  real-stack.spec.ts  runtime.ts
frontend/scripts/: openapi.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/tests/: adminClient.test.ts  apiContract.test.ts  apiTransport.test.ts  (+7 more)
(+142 files in other folders)
